--- a/simple_flask_app-main/Jenkinsfile
+++ b/simple_flask_app-main/Jenkinsfile
@@ -15,17 +15,22 @@ pipeline {
             }
         }
         
-    stages {
         stage('Set Up Python Environment') {
             steps {
                 script {
+                    // Create a virtual environment and upgrade pip
                     bat 'python -m venv venv'
-                    bat 'venv\\Scripts\\activate.bat && pip install --upgrade pip'
-                    bat 'venv\\Scripts\\activate.bat && pip install -r requirements.txt'
+                    bat 'venv\\Scripts\\activate.bat && python -m pip install --upgrade pip'
+                    
+                    // Install dependencies from requirements.txt inside the nested folder
+                    bat '''
+                        venv\\Scripts\\activate.bat && (
+                            pip install -r simple_flask_app-main/requirements.txt --verbose
+                        )
+                    '''
                 }
             }
         }
-    }
         
         stage('Run Tests') {
             steps {
